# kaos

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  PLAN_OTEL.md  README.md  REPORT.md  test-agent-deployment.yaml
.github/: copilot-instructions  copilot-instructions.md
.github/instructions/: e2e.instructions.md  operator.instructions.md  python.instructions.md
.github/workflows/: build-mcp-python-string.yaml  build-mcp-rawpython.yaml  cache-cleanup.yaml  dev-build.yaml  docker-push.yaml  docs.yaml  e2e-tests.yaml  go-tests.yaml  python-tests.yaml  rebuild-docs.yaml  release.yaml  reusable-build-images.yaml  reusable-docs.yaml  reusable-tests.yaml  test-release.yaml
agent/: pyproject.toml
agent/tests/: conftest.py  test_multi_agent.py
charts/: index.yaml  kaos-operator-0.0.2-dev.tgz  kaos-operator-0.1.2.tgz  kaos-operator-0.1.3-dev.tgz  kaos-operator-0.1.3.tgz  kaos-operator-0.1.4-dev.tgz  kaos-operator-v0.1.4-dev.tgz
data-plane/kaos-framework/: Dockerfile  Makefile  pyproject.toml
data-plane/kaos-framework/agent/: memory.py  server.py
data-plane/kaos-framework/mcptools/: client.py  server.py
data-plane/kaos-framework/modelapi/: client.py
data-plane/kaos-framework/tests/: conftest.py  mock_model_server.py  test_agent.py  test_agent_server.py  test_agentic_loop.py  test_telemetry.py
data-plane/mcp-servers/python-string/: Dockerfile  README.md  pyproject.toml  server.py
data-plane/mcp-servers/python-string/tests/: test_python_string.py
data-plane/mcp-servers/rawpython/: Dockerfile  README.md  pyproject.toml  server.py
data-plane/mcp-servers/rawpython/tests/: test_rawpython.py
dev/: 404.html  README.html  hashmap.json  index.html
dev/assets/: README.md._vLldZXn.js  README.md._vLldZXn.lean.js  app.xvESaWRp.js  cli_commands.md.CvozRShK.js  cli_commands.md.CvozRShK.lean.js  cli_overview.md.eKHGCVU9.js  cli_overview.md.eKHGCVU9.lean.js  development_releasing.md.C-yHtQOD.js  development_releasing.md.C-yHtQOD.lean.js  development_testing.md.ttMtj81T.js  development_testing.md.ttMtj81T.lean.js  getting-started_concepts.md.CM293OaD.js  getting-started_concepts.md.CM293OaD.lean.js  getting-started_installation.md.BLOd_DJt.js  getting-started_installation.md.BLOd_DJt.lean.js  getting-started_quickstart.md.CNpolI1p.js  getting-started_quickstart.md.CNpolI1p.lean.js  index.md.DO4uFsd0.lean.js  operator_agent-crd.md.DgDXE0JK.js  operator_agent-crd.md.DgDXE0JK.lean.js  operator_gateway-api.md.Cq55YVgq.js  operator_gateway-api.md.Cq55YVgq.lean.js  operator_mcpserver-crd.md.CTwJ8qim.js  operator_mcpserver-crd.md.CTwJ8qim.lean.js  operator_modelapi-crd.md.DxdXtQTR.js  operator_modelapi-crd.md.DxdXtQTR.lean.js  operator_overview.md.D_3jk6IN.js  operator_overview.md.D_3jk6IN.lean.js  operator_telemetry.md.4-1RGBbg.js  operator_telemetry.md.4-1RGBbg.lean.js  python-framework_agent.md.os0_ARFV.js  python-framework_agent.md.os0_ARFV.lean.js  python-framework_agentic-loop.md.iNs-pDBu.js  python-framework_agentic-loop.md.iNs-pDBu.lean.js  python-framework_mcp-tools.md.CiesCuau.js  python-framework_mcp-tools.md.CiesCuau.lean.js  python-framework_memory.md.B77B8Xym.js  python-framework_memory.md.B77B8Xym.lean.js  python-framework_model-api.md.vn0T36zj.js  python-framework_model-api.md.vn0T36zj.lean.js  (+21 more)
dev/cli/: commands.html  overview.html
dev/development/: releasing.html  testing.html
dev/getting-started/: concepts.html  installation.html  quickstart.html
dev/operator/: agent-crd.html  gateway-api.html  mcpserver-crd.html  modelapi-crd.html  overview.html  telemetry.html
dev/python-framework/: agent.html  agentic-loop.html  mcp-tools.html  memory.html  model-api.html  overview.html  server.html
dev/reference/: docker-images.html  environment-variables.html  troubleshooting.html
dev/tutorials/: custom-mcp-tools.html  multi-agent.html  simple-agent-tools.html
dev/ui/: features.html  overview.html
docs/: README.md  index.md  package-lock.json  package.json
docs/.vitepress/: config.ts
docs/cli/: commands.md  overview.md
docs/development/: releasing.md  testing.md
docs/getting-started/: concepts.md  installation.md  quickstart.md
docs/operator/: agent-crd.md  gateway-api.md  mcpserver-crd.md  modelapi-crd.md  overview.md  telemetry.md
docs/python-framework/: agent.md  agentic-loop.md  mcp-tools.md  memory.md  model-api.md  overview.md  server.md
docs/reference/: docker-images.md  environment-variables.md  troubleshooting.md
docs/tutorials/: custom-mcp-tools.md  multi-agent.md  simple-agent-tools.md
docs/ui/: features.md  overview.md
hack/: install-metallb.sh  kind-e2e-values.yaml  run-e2e-tests.sh  update-kind-e2e-values.sh
kaos-cli/: README.md  pyproject.toml
kaos-cli/kaos_cli/: install.py  main.py  ui.py
latest/: 404.html  README.html  hashmap.json  index.html  redirect-index.html
latest/assets/: README.md.DX4je4AC.js  README.md.DX4je4AC.lean.js  app.BTtPnG5O.js  cli_commands.md.C5hd8U8R.js  cli_commands.md.C5hd8U8R.lean.js  cli_overview.md.B72rT7gu.js  cli_overview.md.B72rT7gu.lean.js  development_releasing.md.DnnuT7Ln.js  development_releasing.md.DnnuT7Ln.lean.js  (+49 more)
mcp-servers/python/: README.md  loader.py  pyproject.toml
model-api/: README.md
operator/: Dockerfile  Makefile  go.mod  go.sum  main.go
operator/tests/: Makefile  __init__.py  pyproject.toml
operator/tests/e2e/: README.md  __init__.py  conftest.py  manual_test.py  test_agentic_loop_e2e.py  test_base_func_e2e.py  test_echo_agent_e2e.py  test_helm_install_e2e.py  test_mcp_tools_e2e.py  test_modelapi_e2e.py  test_multi_agent_e2e.py
python/: Dockerfile  Makefile  pyproject.toml
python/agent/: client.py  memory.py  server.py
python/agent/telemetry/: __init__.py  config.py  metrics.py  tracing.py
python/mcptools/: client.py  server.py
python/modelapi/: client.py
python/telemetry/: __init__.py  manager.py
python/tests/: test_agent.py  test_agent_server.py  test_agentic_loop.py  test_mcptools.py  test_telemetry.py
v0.1.2/: 404.html  README.html  hashmap.json  index.html
v0.1.3/: 404.html  README.html  hashmap.json  index.html
(+454 files in other folders)
