[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-mcp-servers"
version = "0.1.0"
description = "MCP (Model Context Protocol) Server Wrapper for Agentic Kubernetes Operator"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.24.0",
    "uvicorn>=0.24.0",
    "mcp-server-calculator>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_mcp"]
