[project]
name = "operator-tests"
version = "0.1.0"
description = "Operator tests"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pyyaml>=6.0.3",
    "sh>=2.2.2",
    "mcp>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["e2e"]

[dependency-groups]
dev = [
    "pytest-xdist>=3.8.0",
]
